fix: modify open card height on mobile

--- a/okp4-gatsby/src/assets/styles/pages/learn/_roadmap.scss
+++ b/okp4-gatsby/src/assets/styles/pages/learn/_roadmap.scss
@@ -305,7 +305,7 @@
 
           @media screen and (max-width: 1025px) {
             width: 100vw;
-            height: max-content;
+            height: inherit;
             max-height: unset;
             min-height: unset;
 
